Fixed JSON data by wrapping all property values in doublequotes.

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,11 @@
 
 .App-footer {
   background-color: #aaaaaa;
-  text-align: center;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
   width: 100%;
   height: 45px;
-  position: absolute;
-  bottom: 0;
 }
 
 .App-header {
@@ -37,7 +37,7 @@
   width: 95%;
 }
 
-.Explore {
+.Explore a {
   text-decoration: none;
 }
 
